final fix on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,10 @@ body {
 
 .services-container-with-overlay {
   @apply relative bg-fixed bg-cover bg-center p-6 md:p-16;
+  background-image: url('/8.webp');
+}
+.detailed-services-container-with-overlay {
+  @apply relative bg-fixed bg-cover bg-center p-6 md:p-16;
   background-image: url('/9.webp');
 }
 
@@ -45,7 +49,7 @@ body {
 
 .contact-us-container {
   @apply relative bg-fixed bg-cover bg-center bg-white h-full overflow-hidden p-16 md:p-32 flex justify-center items-center;
-  background-image: "url('/11.jpg')";
+  background-image: url('/11.jpg');
 }
 
 @media only screen and (max-width: 768px) {
@@ -56,6 +60,11 @@ body {
   }
 
   .services-container-with-overlay {
+    background-attachment: scroll !important; /* Override any fixed background attachments */
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .detailed-services-container-with-overlay {
     background-attachment: scroll !important; /* Override any fixed background attachments */
     background-position: center;
     background-repeat: no-repeat;
